force-app/main/default/objects/Tax_Slab__c/Tax_Slab__c.object-meta.xml
<CustomObject>
    <label>Tax Slab</label>
    <nameField>
        <displayFormat>TAX-{0000}</displayFormat>
        <label>Tax Slab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Slabs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>