force-app/main/default/objects/Tax_Slab__c/fields/Tax1_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax1_Code__c</fullName>
    <label>Tax1 Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>