force-app/main/default/objects/Tax_Slab__c/fields/Tax1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax1_Percentage__c</fullName>
    <label>Tax1 Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>