force-app/main/default/objects/Tax_Slab__c/fields/Tax1_Percentage_on_100__c.field-meta.xml
<CustomField>
    <fullName>Tax1_Percentage_on_100__c</fullName>
    <formula>Taxable1_Percentage__c * Tax1_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax1 Percentage (on 100%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>