force-app/main/default/objects/Tax_Slab__c/fields/Tax2_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax2_Name__c</fullName>
    <label>Tax2 Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TDCBC</fullName>
            </value>
            <value>
                <fullName>TDCBF</fullName>
            </value>
            <value>
                <fullName>ST3FP</fullName>
            </value>
            <value>
                <fullName>S37FP</fullName>
            </value>
            <value>
                <fullName>SBFB</fullName>
            </value>
            <value>
                <fullName>SBSB</fullName>
            </value>
            <value>
                <fullName>VT1FP</fullName>
            </value>
            <value>
                <fullName>KKCFB</fullName>
            </value>
            <value>
                <fullName>SPKFA</fullName>
            </value>
            <value>
                <fullName>STIWP</fullName>
            </value>
            <value>
                <fullName>SPKIN</fullName>
            </value>
            <value>
                <fullName>SBCI</fullName>
            </value>
            <value>
                <fullName>SSBGC</fullName>
            </value>
            <value>
                <fullName>STPGC</fullName>
            </value>
            <value>
                <fullName>STKGC</fullName>
            </value>
            <value>
                <fullName>S12MP</fullName>
            </value>
            <value>
                <fullName>SPKMS</fullName>
            </value>
            <value>
                <fullName>SBCM</fullName>
            </value>
            <value>
                <fullName>SPKWC</fullName>
            </value>
            <value>
                <fullName>SSBCW</fullName>
            </value>
            <value>
                <fullName>STPWC</fullName>
            </value>
            <value>
                <fullName>SPKSL</fullName>
            </value>
            <value>
                <fullName>SBCSL</fullName>
            </value>
            <value>
                <fullName>STLCP</fullName>
            </value>
            <value>
                <fullName>SPKSC</fullName>
            </value>
            <value>
                <fullName>STSBC</fullName>
            </value>
            <value>
                <fullName>STPCM</fullName>
            </value>
            <value>
                <fullName>SMKKC</fullName>
            </value>
            <value>
                <fullName>SMSBC</fullName>
            </value>
            <value>
                <fullName>SMST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>