force-app/main/default/objects/Tax_Slab__c/fields/Tax2_Percentage_on_100__c.field-meta.xml
<CustomField>
    <fullName>Tax2_Percentage_on_100__c</fullName>
    <formula>Taxable2_Percentage__c * Tax2_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax2 Percentage (on 100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>