force-app/main/default/objects/Tax_Slab__c/fields/Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name__c</fullName>
    <label>Tax Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>