force-app/main/default/objects/Tax_Slab__c/fields/Taxable2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Taxable2_Percentage__c</fullName>
    <label>Taxable2 Percentage</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>