force-app/main/default/objects/Tax_Slab__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Name__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Tax1_Name__c</columns>
    <columns>Tax1_Percentage_on_100__c</columns>
    <columns>Tax2_Name__c</columns>
    <columns>Tax2_Percentage_on_100__c</columns>
    <columns>Charge_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>